# STELLA_REMOTE_PC_ROS2_N2

stella_cartographer/: CMakeLists.txt  package.xml
stella_cartographer/config/: stella.lua
stella_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
stella_description/urdf/: stella.urdf
stella_navigation2/: CMakeLists.txt  package.xml
stella_navigation2/launch/: navigation2.launch.py
stella_navigation2/map/: stella_world.yaml
stella_navigation2/param/: stella.yaml
stella_teleop/: package.xml  setup.py
stella_teleop/stella_teleop/script/: teleop_keyboard.py
